tests/NormalTests/paczka1/fuzzy1/20400901.err
Error in line 1: 0HIIV S520 99,55
Error in line 2: 0HIIV S520 220,9
Error in line 8: A604 A496 18,8
Error in line 18: 8qwC4NC3T A496 93,9
